basic app finished

--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -65,4 +63,43 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+label {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  display: block;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+textarea {
+  resize: vertical;
+  min-height: 100px;
+}
+
+input:focus,
+textarea:focus {
+  border-color: #007aff; /* Blue focus border */
+  outline: none;
+}
+
+div {
+  margin-bottom: 15px;
+}
+
+button{
+  margin-right: 15px;
 }
